--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
     padding-top: 0px;
     padding-bottom: 0px;
 
-    .banner{
+    .banner {
         border-radius: 30px;
     }
 }
@@ -38,12 +38,12 @@ header {
     border-radius: 30px;
 }
 
-button{
-    border: solid 5px rgb(205, 228, 205);
+button {
+    border: solid 3px rgb(205, 228, 205);
     border-radius: 50px;
 }
 
-button:hover{
+button:hover {
     background-color: lightblue;
 }
 
@@ -54,7 +54,7 @@ main {
     margin: 20px;
     text-align: center;
 
-   
+
     .button {
         height: 120px;
         width: 100px;
@@ -109,7 +109,8 @@ main {
 .mainlogin {
     font-family: 'Ubuntu', sans-serif;
     background-color: #ffffff;
-    margin: 7em auto;
+    margin: 5px;
+    padding: 20px;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
@@ -143,8 +144,9 @@ main {
     font-family: 'Ubuntu', sans-serif;
 }
 
-form.form1 {
+.form {
     padding-top: 40px;
+    text-align: center;
 }
 
 .pass {
@@ -185,7 +187,6 @@ form.form1 {
     padding-bottom: 10px;
     padding-top: 10px;
     font-family: 'Ubuntu', sans-serif;
-    margin-left: 35%;
     font-size: 13px;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
@@ -195,7 +196,6 @@ form.form1 {
 
 .forgot {
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-    color: #E1BEE7;
-    padding-top: 15px;
-    text-align: center;
+    background-color: #eee5f0;
+    margin: 10px;
 }
