--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ header {
     .banner {
         border-radius: 30px;
     }
+
+    .toggle {
+        padding: 5px;
+        margin: 3px;
+    }
+
+    .logout {
+        float: right;
+    }
 }
 
 .menu {
@@ -56,8 +65,8 @@ main {
 
 
     .button {
-        height: 120px;
-        width: 100px;
+        height: 110px;
+        width: 85px;
         padding: 15px;
         border-radius: 10px;
         background-color: white;
@@ -198,4 +207,34 @@ main {
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
     background-color: #eee5f0;
     margin: 10px;
+}
+
+/* CSS for segmentation */
+.segmentation {
+    text-align: center;
+}
+
+.imaging {
+    text-align: center;
+    .title{
+        color: lightsteelblue;
+    }
+
+}
+
+.home{
+    float: right;
+}
+
+#aSide {
+    border-radius: 20px;
+    height: 850px;
+    width: 100%;
+    text-align: center;
+}
+
+/* This styles the 3D object inserted in the aside container */
+#aSide model-viewer {
+    height: 850px;
+    width: 100%;
 }
