--- a/style.css
+++ b/style.css
@@ -214,16 +214,21 @@ main {
     text-align: center;
 }
 
-.imaging {
+.imaging,
+.augmenting,
+.camering {
     text-align: center;
-    .title{
-        color: lightsteelblue;
+    margin-top: 20px;
+
+    .title {
+        color: rgb(170, 22, 22);
     }
 
 }
 
-.home{
+.home {
     float: right;
+    margin-right: 50px;
 }
 
 #aSide {
@@ -237,4 +242,106 @@ main {
 #aSide model-viewer {
     height: 850px;
     width: 100%;
+}
+
+/* This styles the section for augmentation reality */
+.video {
+    position: relative;
+    text-align: center;
+    margin: auto;
+    width: 50em;
+    height: 50em;
+    z-index: -10;
+
+}
+
+.smallVideo {
+    position: relative;
+    text-align: center;
+    border: 1px solid greenyellow;
+    border-radius: 10%;
+    margin: auto;
+    width: 30em;
+    z-index: 10;
+    bottom: 900px;
+    height: 300px;
+}
+
+#myCanvas {
+    position: relative;
+    width: 150em;
+    height: 70em;
+}
+
+.augment {
+    height: 40px;
+    width: 20px;
+    text-align: center;
+}
+
+
+.augment model-viewer {
+    height: 20em;
+    width: 35em;
+}
+
+/* styling for the camera section */
+#video {
+    border: 1px solid black;
+    box-shadow: 2px 2px 3px black;
+    width: 320px;
+    height: 240px;
+}
+
+#photo {
+    border: 1px solid black;
+    box-shadow: 2px 2px 3px black;
+    width: 320px;
+    height: 240px;
+}
+
+#canvas {
+    display: none;
+}
+
+.camera {
+    width: 340px;
+    text-align: center;
+}
+
+.output {
+    width: 340px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+#startbutton {
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 32px;
+    background-color: rgba(0, 150, 0, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
+    font-size: 14px;
+    font-family: "Lucida Grande", "Arial", sans-serif;
+    color: rgba(255, 255, 255, 1);
+}
+
+.contentarea {
+    text-align: center;
+    font-size: 16px;
+    font-family: "Lucida Grande", "Arial", sans-serif;
+    width: 1050px;
+}
+
+.centerImg {
+    float: right;
+    padding: 5px;
+    margin: 5px;
+    width: 350px;
+    text-align: center;
+    border: solid 6px rgb(146, 125, 221);
+    border-radius: 15px;
 }
